test/libsolidity/syntaxTests/nameAndTypeResolution/245_tuples_empty_components.sol
contract C {
    function f() public {
        (1,,2);
    }
}
// ----
// TypeError 8381: (47-53): Tuple component cannot be empty.
